--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "cldr-data": "^36.0.0",
     "cldr-dates-full": "^37.0.0",
     "cldr-numbers-full": "^37.0.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
