--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@progress/kendo-react-intl": "3.17.0",
     "@progress/kendo-react-popup": "3.17.0",
     "@progress/kendo-react-scheduler": "3.17.0",
+    "@progress/kendo-react-grid": "3.17.0",
+    "@progress/kendo-data-query": "1.5.4",
+    "@progress/kendo-react-animation": "3.17.0",
+    "@progress/kendo-react-data-tools": "3.17.0",
     "cldr-core": "^37.0.0",
     "cldr-data": "^36.0.0",
     "cldr-dates-full": "^37.0.0",
