Drag & Drop- Added dialog box

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-data-query": "1.5.4",
     "@progress/kendo-date-math": "1.5.1",
     "@progress/kendo-drawing": "1.13.7",
+    "@progress/kendo-react-animation": "3.17.0",
     "@progress/kendo-react-buttons": "3.17.0",
     "@progress/kendo-react-common": "3.17.0",
+    "@progress/kendo-react-data-tools": "3.17.0",
     "@progress/kendo-react-dateinputs": "3.17.0",
-    "@progress/kendo-react-dialogs": "3.17.0",
+    "@progress/kendo-react-dialogs": "^3.17.0",
     "@progress/kendo-react-dropdowns": "3.17.0",
     "@progress/kendo-react-form": "3.17.0",
+    "@progress/kendo-react-grid": "3.17.0",
     "@progress/kendo-react-inputs": "3.17.0",
     "@progress/kendo-react-intl": "3.17.0",
     "@progress/kendo-react-popup": "3.17.0",
     "@progress/kendo-react-scheduler": "3.17.0",
-    "@progress/kendo-react-grid": "3.17.0",
-    "@progress/kendo-data-query": "1.5.4",
-    "@progress/kendo-react-animation": "3.17.0",
-    "@progress/kendo-react-data-tools": "3.17.0",
     "cldr-core": "^37.0.0",
     "cldr-data": "^36.0.0",
     "cldr-dates-full": "^37.0.0",
